src/objects/Client_Referral__c.object
<CustomObject>
    <fields>
        <fullName>Sentence_Length__c</fullName>
        <label>Sentence Length</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sexual_Element_to_Offence__c</fullName>
        <label>Sexual Element to Offence</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shredded_Information_Date__c</fullName>
        <label>Shredded Information Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shredded_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shredded Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Outcome_Count__c</fullName>
        <label>Status/Outcome Count</label>
        <summaryForeignKey>Client_Outcome__c.Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supervision_Period_Ending__c</fullName>
        <label>Supervision Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEO_Username__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TEO/RSW Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEO__c</fullName>
        <label>TEO</label>
        <picklist>
            <picklistValues>
                <fullName>abuggie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACARROLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHIGGINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALYNCHEHAUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASMYTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGALLAGHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKELLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOWENS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRIDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTYRELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGLYNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHOLTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMCGUIGAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTONER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGAVIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOLOUGHLIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hroberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JHAYES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JMOLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KildareTEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LKENNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lwilkinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWALSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSPENCER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBATES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDEROISTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHYLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TGeraghty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>trogers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Sanction__c</fullName>
        <label>Type of Sanction</label>
        <picklist>
            <picklistValues>
                <fullName>Community Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSSSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Sentence__c</fullName>
        <label>Type of Sentence</label>
        <picklist>
            <picklistValues>
                <fullName>Custodial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodial &amp; Post-Release Supervision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Latest_Status_Outcome__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Referral</label>
    <listViews>
        <fullName>All_Client_Referrals</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Client__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>Prison_Referral_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Legacy_Creation_Date__c</columns>
        <columns>Prison__c</columns>
        <columns>Offence__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Client Referrals</label>
    </listViews>
    <listViews>
        <fullName>Brid_s_Active_referrals_2013</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ReferralDate__c</columns>
        <columns>Year__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Wallace</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Brid&apos;s Active referrals 2013</label>
    </listViews>
    <listViews>
        <fullName>Denis_All_Referrals_2013</fullName>
        <columns>NAME</columns>
        <columns>ReferralDate__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferralDate__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>McGuigan</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Denis</value>
        </filters>
        <label>Denis All Referrals 2013</label>
    </listViews>
    <listViews>
        <fullName>Derek_s_referrals</fullName>
        <columns>NAME</columns>
        <columns>Referred_By__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Toner</value>
        </filters>
        <label>Derek&apos;s referrals</label>
    </listViews>
    <listViews>
        <fullName>Ellen_s_Referrals_2013</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Year__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>O&apos;Loughlin</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ellen</value>
        </filters>
        <filters>
            <field>Programme__c</field>
            <operation>equals</operation>
            <value>Linkage</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Ellen&apos;s Referrals 2013</label>
    </listViews>
    <listViews>
        <fullName>Gate_Sex_Offence_referrals_to_date</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <columns>Offence__c</columns>
        <columns>Prison__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme__c</field>
            <operation>contains</operation>
            <value>GATE</value>
        </filters>
        <filters>
            <field>Programme__c</field>
            <operation>contains</operation>
            <value>Gate</value>
        </filters>
        <filters>
            <field>Offence__c</field>
            <operation>contains</operation>
            <value>sex offence</value>
        </filters>
        <filters>
            <field>ReferralDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2007</value>
        </filters>
        <label>Gate Sex Offence referrals to date</label>
    </listViews>
    <listViews>
        <fullName>Jerry_s_client_referrals_2013</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Williams</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jerry</value>
        </filters>
        <filters>
            <field>ReferralDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Jerry&apos;s client referrals 2013</label>
    </listViews>
    <listViews>
        <fullName>Linkage_Sex_Off_refs_outcomes_to_date</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <columns>Offence__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>Referred_From__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Latest_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme__c</field>
            <operation>contains</operation>
            <value>Linkage</value>
        </filters>
        <filters>
            <field>Offence__c</field>
            <operation>contains</operation>
            <value>sex offence</value>
        </filters>
        <filters>
            <field>ReferralDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2009</value>
        </filters>
        <label>Linkage Sex Off. refs&amp;outcomes to date</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Programme__c</columns>
        <columns>Prison__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>Referred_By__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Latest_Status__c</field>
            <operation>contains</operation>
            <value>Active</value>
        </filters>
        <label>My Active Referrals</label>
    </listViews>
    <listViews>
        <fullName>My_Clients_All_Statuses</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Placed</value>
        </filters>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Not Met to Date</value>
        </filters>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>Engaged but Discontinued</value>
        </filters>
        <label>My Clients All Statuses</label>
    </listViews>
    <listViews>
        <fullName>My_Not_Met_to_Date_clients</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Client_FName__c</columns>
        <columns>Client_LName__c</columns>
        <columns>Client_TEO__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <columns>Latest_Outcome__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Latest_Status__c</field>
            <operation>equals</operation>
            <value>not met to date</value>
        </filters>
        <label>My &apos;Not Met to Date&apos; clients</label>
    </listViews>
    <listViews>
        <fullName>Referral_date_blank</fullName>
        <columns>Referral_ID__c</columns>
        <columns>NAME</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <columns>Legacy_Created_By__c</columns>
        <columns>Programme__c</columns>
        <columns>ReferralDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferralDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>Referral date blank</label>
    </listViews>
    <listViews>
        <fullName>Rita_s_Referrals_so_far_2013</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Year__c</columns>
        <columns>Latest_Status_Outcome__c</columns>
        <columns>Latest_Status__c</columns>
        <columns>Latest_Outcome__c</columns>
        <columns>Referrals__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Spencer</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Rita&apos;s Referrals so far 2013</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Referrals</pluralLabel>
    <recordTypes>
        <fullName>Gate</fullName>
        <active>true</active>
        <label>Gate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Linkage</fullName>
        <active>true</active>
        <label>Linkage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resettlement</fullName>
        <active>true</active>
        <label>Resettlement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>